Partial Java 9 modules support, does NOT work at this moment

--- a/analyzer/pom.xml
+++ b/analyzer/pom.xml
@@ -119,6 +119,11 @@
             <exclude>UserAgents/**/*.tab</exclude>
             <exclude>UserAgents/**/*.md</exclude>
           </excludes>
+          <archive>
+            <manifestEntries>
+              <Automatic-Module-Name>nl.basjes.yauaa</Automatic-Module-Name>
+            </manifestEntries>
+          </archive>
         </configuration>
       </plugin>
 
