--- a/analyzer-it/java-11-module/pom.xml
+++ b/analyzer-it/java-11-module/pom.xml
@@ -19,18 +19,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
   <parent>
+    <artifactId>yauaa-integration-tests</artifactId>
     <groupId>nl.basjes.parse.useragent</groupId>
-    <artifactId>yauaa-serialization-tests-parent</artifactId>
     <version>5.24-SNAPSHOT</version>
   </parent>
-
+  <modelVersion>4.0.0</modelVersion>
   <packaging>jar</packaging>
-
-  <artifactId>yauaa-serialization-tests-java-kryo-5</artifactId>
-  <name>Yauaa : Serialization Tests : Java Kryo 5</name>
 
   <dependencies>
     <dependency>
@@ -38,35 +33,21 @@
       <artifactId>yauaa</artifactId>
       <version>${project.version}</version>
     </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>${slf4j.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.esotericsoftware</groupId>
-      <artifactId>kryo</artifactId>
-      <version>${kryo5.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>nl.basjes.parse.useragent</groupId>
-      <artifactId>yauaa-serialization-tests-lib</artifactId>
-      <version>${project.version}</version>
-      <classifier>tests</classifier>
-      <scope>test</scope>
-    </dependency>
-
   </dependencies>
+
+  <artifactId>yauaa-java11-module-tests</artifactId>
+  <name>Yauaa : IT : Java 11 Module</name>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <release>11</release>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
