--- a/analyzer-it/pom.xml
+++ b/analyzer-it/pom.xml
@@ -27,8 +27,8 @@
   <modelVersion>4.0.0</modelVersion>
   <packaging>pom</packaging>
 
-  <artifactId>yauaa-serialization-tests-parent</artifactId>
-  <name>Yauaa : Serialization Tests : </name>
+  <artifactId>yauaa-integration-tests</artifactId>
+  <name>Yauaa : IT :</name>
 
   <properties>
     <!-- We override this setting because the one in the parent causes problems -->
@@ -38,11 +38,20 @@
   </properties>
 
   <modules>
-    <module>base-tests</module>
-    <module>java-default</module>
-    <module>java-kryo-4</module>
-    <module>java-kryo-5</module>
+    <module>serialization</module>
   </modules>
+
+  <profiles>
+    <profile>
+      <id>Build the JDK 11+ integration tests.</id>
+      <activation>
+        <jdk>[1.11,)</jdk>
+      </activation>
+      <modules>
+        <module>java-11-module</module>
+      </modules>
+    </profile>
+  </profiles>
 
   <build>
     <plugins>
